# kchat

./: README.md  pyproject.toml
src/kchat/: cli.py
src/kchat/kafka/: con.py  con_chat.py  pro.py  pro_chat.py
